# Info2025

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: how_to_develop.md
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: description.launch.py
src/robot_description/rviz/: description.rviz
src/robot_description/urdf/parts/base/: base.gazebo.xacro  base.urdf.xacro
src/robot_description/urdf/parts/wheels/: caster_wheel.gazebo.xacro  caster_wheel.urdf.xacro  mecanum_wheel.gazebo.xacro  mecanum_wheel.urdf.xacro  wheel.gazebo.xacro  wheel.urdf.xacro
src/robot_description/urdf/robots/: 2wd.urdf.xacro
src/robot_description/urdf/sensors/: depth_sensor.urdf.xacro  generic_laser.urdf.xacro  imu.gazebo.xacro  imu.urdf.xacro  laser.urdf.xacro
