<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>robot_description</name>
    <version>0.0.0</version>
    <description>INSA Toulouse Description Package</description>
    <maintainer email="rbonnet@insa-toulouse.fr">Ronan Bonnet</maintainer>
    <license>Apache 2.0</license>
    <url type="repository">https://github.com/ClubRobotInsat/Info2025</url>
    <url type="bugtracker">https://github.com/ClubRobotInsat/Info2025/issues</url>
    <buildtool_depend>ament_cmake</buildtool_depend>
    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>xacro</exec_depend>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>